# recommendation-system

./: .env  pyproject.toml
src/: main.py
src/api/: __init__.py  inventory_manager_v1.py  inventory_manager_v2.py  recommendation.py
src/config/: dependency.py  logging.py  settings.py
src/database/: mongodb_connector.py  vector_store.py
src/models/: sbert_model.py
src/pipelines/: ingestion_pipeline.py
src/utils/: data_processor.py
