[project]
name = "recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "pandas>=2.0.3",
    "pydantic-settings>=2.7.1",
    "pymongo>=4.10.1",
    "scikit-learn>=1.3.2",
]
